[gd_scene load_steps=13 format=2]

[ext_resource path="res://Raio1.gd" type="Script" id=1]
[ext_resource path="res://Node2D.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Raio3.gd" type="Script" id=4]
[ext_resource path="res://Raio2.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 55.5, 239.125 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 34, 37.5 )

[sub_resource type="CircleShape2D" id=3]
radius = 36.1386

[sub_resource type="CircleShape2D" id=8]
radius = 58.0086

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 69, 35.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 23.25, 32.75 )

[sub_resource type="CircleShape2D" id=7]
radius = 30.4795

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 858, 265.875 )
shape = SubResource( 1 )

[node name="Icon2" type="Sprite" parent="Area2D"]
position = Vector2( 834, 221 )
scale = Vector2( 0.34375, 5.98828 )
texture = ExtResource( 3 )

[node name="Raio1" type="KinematicBody2D" parent="."]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Raio1"]
position = Vector2( -1, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Raio1/Area2D"]
position = Vector2( 203, 200.5 )
shape = SubResource( 2 )

[node name="Icon" type="Sprite" parent="Raio1"]
position = Vector2( 204, 197 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Raio1"]
position = Vector2( 243, 201 )
shape = SubResource( 3 )

[node name="Button" type="Button" parent="."]
margin_left = 2.0
margin_top = 405.0
margin_right = 435.0
margin_bottom = 600.0
action_mode = 0

[node name="Raio2" type="KinematicBody2D" parent="."]
script = ExtResource( 5 )

[node name="Area2D2" type="Area2D" parent="Raio2"]
position = Vector2( 5, 395 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Raio2/Area2D2"]
position = Vector2( 238, -86 )
shape = SubResource( 8 )

[node name="Icon" type="Sprite" parent="Raio2"]
position = Vector2( 207, 311 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Raio2"]
position = Vector2( 163, 311 )
shape = SubResource( 9 )

[node name="Raio3" type="KinematicBody2D" parent="."]
script = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="Raio3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Raio3/Area2D"]
position = Vector2( 201.25, 84.75 )
shape = SubResource( 6 )

[node name="Icon" type="Sprite" parent="Raio3"]
position = Vector2( 211, 81 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Raio3"]
position = Vector2( 224, 81 )
shape = SubResource( 7 )

[connection signal="area_entered" from="Raio1/Area2D" to="Raio1" method="_on_Area2D_area_entered"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="area_entered" from="Raio2/Area2D2" to="." method="_on_Area2D2_area_entered"]
[connection signal="area_entered" from="Raio3/Area2D" to="Raio3" method="_on_Area2D_area_entered"]
